--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
 	"packageManager": "yarn@4.4.0",
 	"type": "module",
 	"scripts": {
-		"start": "node index.js",
+		"start": "node --env-file .env ./src/index.js",
 		"dev": "node --env-file .env --watch ./src/index.js"
 	},
 	"dependencies": {
