--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,13 @@
 	"packageManager": "yarn@4.4.0",
 	"type": "module",
 	"scripts": {
-		"start": "node --env-file .env ./src/index.js",
-		"dev": "node --env-file .env --watch ./src/index.js"
+		"start": "node ./src/index.js",
+		"dev": "node --watch ./src/index.js"
 	},
 	"dependencies": {
+		"dotenv": "16.4.5",
 		"express": "4.19.2",
-		"mongoose": "8.5.3"
+		"mongoose": "8.5.3",
+		"morgan": "1.10.0"
 	}
 }
